# discordboy

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs.yml
discordboy/: __init__.py  __main__.py  bot.py  config.py  controller.py  emulator.py  screenshot.py  utils.py
docs/: index.md
docs/api/: bot.md  config.md  controller.md  emulator.md  utils.md
tests/: __init__.py  conftest.py  test_config.py  test_controller.py  test_emulator.py  test_utils.py
